@@ -12,7 +12,11 @@ if ($mm_ver =~ /_/) {
 WriteMakefile(
     'NAME'		=> 'again',
     'VERSION_FROM'	=> 'lib/again.pm', # finds $VERSION
-    'PREREQ_PM'		=> {}, # e.g., Module::Name => 1.1
+    'PREREQ_PM'		=> {
+        'strict'   => 0,
+        'warnings' => 0,
+        'Carp'     => 0,
+    },
 
     ($] >= 5.005 ?    ## Add these new keywords supported since 5.005
       (ABSTRACT_FROM => 'lib/again.pm', # retrieve abstract from module
