@@ -1,6 +1,7 @@
 Revision history for Perl module 'again'
 
 0.05 2014-01-29
+    - Added strict, warnings and Carp as prereqs in Makefile.PL
     - Moved again.pm into lib/
     - Specified min perl version as 5.6.0
 
